<resources>
    <string name="app_name">Music Player</string>

    <string name="now_playing">Now Playing: </string>

    <string name="time">00:00</string>

    <string name="album_art">Album Art</string>

    <string name="fast_forward">Fast Forward</string>
    <string name="fast_rewind">Fast Rewind</string>
    <string name="play_song">Play Song</string>
    <string name="pause_song">Pause Song</string>
</resources>